force-app/main/default/objects/Week__c/fields/Fine_per_unfinished_WO__c.field-meta.xml
<CustomField>
    <fullName>Fine_per_unfinished_WO__c</fullName>
    <defaultValue>500</defaultValue>
    <label>Fine per unfinished WO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>