force-app/main/default/objects/Week__c/fields/Number_of_Work_Orders__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Work_Orders__c</fullName>
    <label>Number of Work Orders</label>
    <summaryForeignKey>Work_Order__c.Week__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>