force-app/main/default/objects/Week__c/fields/Week_End__c.field-meta.xml
<CustomField>
    <fullName>Week_End__c</fullName>
    <label>Week End</label>
    <type>DateTime</type>
</CustomField>