force-app/main/default/objects/Week__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Number_of_Work_Orders__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>